[package]
name = "task-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = {version = "0.4.43", features = ["serde"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"]}
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["v4", "serde"]}
